composites/pet-store/all-in-one-composite/pet-store-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pet-store-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
spec:
  rules:
    - host: pet-store.com
      http:
        paths:
          - backend:
              serviceName: pet-store--portal-service
              servicePort: 80
            path: /
